--- a/master/index.html
+++ b/master/index.html
@@ -355,7 +355,7 @@
                   <h1>Home</h1>
                 
                 <p>This is the documentation home for Rojo.</p>
-<p>Other versions of these docs:</p>
+<p>Available versions of these docs:</p>
 <ul>
 <li><a href="https://lpghatguy.github.io/rojo/0.5.x">0.5.x</a></li>
 <li><a href="https://lpghatguy.github.io/rojo/0.4.x">0.4.x</a></li>
