--- a/master/getting-started/creating-a-place/index.html
+++ b/master/getting-started/creating-a-place/index.html
@@ -491,7 +491,7 @@ rojo init
 <p>It's recommended that you set up a Roblox account dedicated to deploying your place instead of your personal account in case your security cookie is compromised.</p>
 </div>
 <p>Generating and uploading your place file is as simple as:</p>
-<div class="codehilite"><pre><span></span>rojo upload --place_id <span class="o">[</span>PLACE ID<span class="o">]</span> --cookie <span class="s2">&quot;[SECURITY COOKIE]&quot;</span>
+<div class="codehilite"><pre><span></span>rojo upload --asset_id <span class="o">[</span>PLACE ID<span class="o">]</span> --cookie <span class="s2">&quot;[SECURITY COOKIE]&quot;</span>
 </pre></div>
                 
                   
