Deploy new docs

--- a/0.5.x/index.html
+++ b/0.5.x/index.html
@@ -357,9 +357,9 @@
                 <p>This is the documentation home for Rojo.</p>
 <p>Available versions of these docs:</p>
 <ul>
+<li><a href="https://lpghatguy.github.io/rojo">Latest version (currently 0.5.x)</a></li>
 <li><a href="https://lpghatguy.github.io/rojo/0.5.x">0.5.x</a></li>
 <li><a href="https://lpghatguy.github.io/rojo/0.4.x">0.4.x</a></li>
-<li><a href="https://lpghatguy.github.io/rojo/master"><code>master</code> branch</a></li>
 </ul>
 <p><strong>Rojo</strong> is a flexible multi-tool designed for creating robust Roblox projects.</p>
 <p>This documentation is a continual work in progress. If you find any issues, please file an issue on <a href="https://github.com/LPGhatguy/rojo/issues">Rojo's issue tracker</a>!</p>
