--- a/0.4.x/index.html
+++ b/0.4.x/index.html
@@ -365,8 +365,8 @@
 <p>This is the documentation home for <strong>Rojo v0.4.x</strong>.</p>
 <p>Other versions of these docs:</p>
 <ul>
+<li><a href="https://lpghatguy.github.io/rojo">Latest version</a></li>
 <li><a href="https://lpghatguy.github.io/rojo/0.5.x">0.5.x</a></li>
-<li><a href="https://lpghatguy.github.io/rojo/master"><code>master</code> branch</a></li>
 </ul>
 <p><strong>Rojo</strong> is a flexible multi-tool designed for creating robust Roblox projects.</p>
 <p>This documentation is a work in progress, and is incomplete.</p>
