--- a/getting-started/creating-a-place/index.html
+++ b/getting-started/creating-a-place/index.html
@@ -453,7 +453,7 @@ rojo init
 </pre></div>
 
 
-<p>Rojo will make a small project file in your directory, named <code>roblox-project.json</code>. It'll make sure that any code in the directory <code>src</code> will get put into <code>ReplicatedStorage.Source</code>.</p>
+<p>Rojo will make a small project file in your directory, named <code>default.project.json</code>. It'll make sure that any code in the directory <code>src</code> will get put into <code>ReplicatedStorage.Source</code>.</p>
 <p>Speaking of, let's make sure we create a directory named <code>src</code>, and maybe a Lua file inside of it:</p>
 <div class="codehilite"><pre><span></span>mkdir src
 <span class="nb">echo</span> <span class="s1">&#39;print(&quot;Hello, world!&quot;)&#39;</span> &gt; src/hello.lua
